--- a/docs/django toDo/mysite/toDo/static/toDo/css/opravila.css
+++ b/docs/django toDo/mysite/toDo/static/toDo/css/opravila.css
@@ -164,6 +164,20 @@ body{
     display: inline-block;
 }
 
+.containerKvadrat {
+	margin-left: 15%;
+    margin-top:2%;
+    background-color: white;
+    padding: 20px;
+    clear: both;
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+    height: auto;
+    overflow: hidden;
+    width: a;
+    display: inline-block;
+}
+
 #Registracija {
 	margin-left: 2%;
 	margin-top: 2%;
@@ -171,9 +185,8 @@ body{
 }
 
 input[type="submit"] {
-	
     margin-top:10px;
-    background-color: #2a103c;
+    background-color: #990000;
     color: white;
     padding: 15px;
     border: none;
@@ -206,9 +219,9 @@ input[type="submit"] {
     #navPoOpravilih ul li a:hover {
         background-color: #999999;
     }
-    #navPoOpravilih ul li a:active {
-        background-color: #999999;
-    }
+    #navPoOpravilih ul li a:active{
+		background: #999999;
+	}
 
 #Opravilo {
     margin-top:10px;
@@ -296,7 +309,7 @@ input[type="datetime-local"] {
 input[type="button"],input[type="reset"]{
     margin-left: 60px;
     margin-top:10px;
-    background-color: #2a103c;
+    background-color: #990000;
     color: white;
     padding: 15px;
     border: none;
@@ -305,7 +318,7 @@ input[type="button"],input[type="reset"]{
     cursor: pointer;
 }
 input[type="button"]:hover,input[type="reset"]:hover,input[type="submit"]:hover{
-    background-color: #695776;
+    background-color: grey;
     box-shadow: 1px 1px #bebebe;
 }
 
