--- a/docs/django toDo/mysite/toDo/static/toDo/css/ToDo.css
+++ b/docs/django toDo/mysite/toDo/static/toDo/css/ToDo.css
@@ -6,28 +6,25 @@
 p{ line-height: 1em; }
 
 h1, h2, h3, h4{
-    color: #0ea7ee;
+    color: #990000;
 	line-height: 1.1em;
 	margin: 0 0 .5em 0;
 }
-h1, h2, h3, h4{
-    color: #0ea7ee;
-	line-height: 1.1em;
-	margin: 0 0 .5em 0;
-}
+
 h1{
     font-size: 2.0em;
+	color: #990000;
 
 }
 h2{
     font-size: 20px;
     font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
-    font-weight: normal;
+    font-weight: bold;
     margin-top:10px;
     margin-left: 25px;
     }
 a{
-	color: #2a103c;
+	color: #990000;
 	text-decoration: none;
 }
 	a:hover,
@@ -58,8 +55,7 @@ body{
 
 #logo{
     margin-left: 1%;
-	width: 5px;
-	height: 5px;
+	width: 35%;
 	margin-top: 50px;
 	font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
 	display: inline-block;
@@ -135,11 +131,41 @@ body{
     display: inline-block;
 }
 
-video {
-    margin-top: 20px;
-    margin: auto;
-    display: block;
+#Uporabnik {
+    text-decoration:none;
+	list-style-type: none;
+    margin-left: 30px;
 }
+    #Uporabnik label{
+		margin-top:10%;
+		margin-bottom:2%;
+		margin-left: 5%;
+        font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+        font-weight: bold;
+        color: black;
+    }
+	
+input[type="submit"], #Uporabnik li a {
+	margin-left: 30px;
+    margin-top:10px;
+    background-color: #990000;
+    color: white;
+    padding: 15px;
+    border: none;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;
+    transition: all 0.3s ease;
+    cursor: pointer;
+	text-decoration:none;
+	list-style-type: none;
+}
+
+	
+	input[type="submit"]:hover, #Uporabnik li a:hover{
+		background-color: grey;
+		box-shadow: 1px 1px #bebebe;
+		text-decoration:none;
+		list-style-type: none;
+	}
 
 #background {
     margin-top: 40px;
