--- a/docs/django toDo/mysite/toDo/templates/toDo/uredi_opravilo.html
+++ b/docs/django toDo/mysite/toDo/templates/toDo/uredi_opravilo.html
@@ -23,30 +23,22 @@
                 <ul>
                     <li><a href="{% url 'preglej_opravila'%}">Opravila</a></li>
                     <li><a href="koledar.html">Koledar</a></li>
-                    <li><a href="{% url 'uporabnik'%}">Uporabnik</a></li>
+                    <li><a href="{% url 'uporabnik' %}">Uporabnik</a></li>
                     <li><a href="{% url 'index' %}">Odjava</a></li>
                 </ul>
             </div>
         </div>
 
-		<div id="navPoOpravilih">
-                <ul>
-                    <li><a href="{% url 'dodaj_opravilo'%}">Dodaj opravilo</a></li>
-                    <li><a href="{% url 'preglej_opravila'%}">Preglej opravila</a></li>
-                    <li><a href="{% url 'preglej_opravila'%}">Opravljena opravila</a></li>
-                </ul>
-            </div>
-			
         <div class="containerReg">
-			<div id="MyTODOlist">
-                <h2>Dodaj opravilo:</h2>
-				<form method='POST' action="{% url 'dodaj_opravilo'%}">{% csrf_token %}
+            <div id="Registracija">
+				<h2>Uredi opravilo:</h2>
+				<form method='POST' action="{% url 'uredi_opravilo' id%}" >{% csrf_token %}
 					{{form.as_p}}
-					<input type='submit' value='Dodaj'/>
+					<input type='submit' value='Posodobi'/>
 				</form>
-			</div>	
-		</div>
-		
+            </div>
+        </div>
+
 		<div id="footer">
 			<p>
 				Made by <a href="/" target="_blank">[Lea]</a>
