--- a/docs/django toDo/mysite/toDo/templates/toDo/preglejOpravila.html
+++ b/docs/django toDo/mysite/toDo/templates/toDo/preglejOpravila.html
@@ -45,12 +45,14 @@
 				{%if vsa_opravila%}
 					<ul>
 						{%for Opravilo in vsa_opravila%}
-							{%if Opravilo.dueDate == datetime.datetime.now%}
-								<p>Opravilo {{Opravilo.id}} moraš opraviti do današnjega dne!</p>
+							{%if Opravilo.opravljen == False %}
+								{%if Opravilo.dueDate == datetime.datetime.now%}
+									<p>Opravilo {{Opravilo.id}} moraš opraviti do današnjega dne!</p>
+								{%endif%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b> {{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Področje: </b> {{Opravilo.get_podrocje_display}} <b>Zapiski: </b> {{Opravilo.zapiski}} 
+							<p></a></li>
 							{%endif%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b> {{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Področje: </b> {{Opravilo.podrocje}} <b>Zapiski: </b> {{Opravilo.zapiski}} 
-						<p></a></li>
 						{%endfor%}
 					</ul>
 				{%else%}
@@ -64,11 +66,13 @@
                 <h2>Datumi:</h2>
 				{%if vsa_opravila%}
 					{%for Opravilo in vsa_opravila%}
+						{%if Opravilo.opravljen == False %}
 						<br><h4><b>{{Opravilo.dueDate}}</b></h4>
 						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Področje: </b> {{Opravilo.podrocje}} <b>Zapiski: </b> {{Opravilo.zapiski}} 
+						<p><b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Področje: </b> {{Opravilo.get_podrocje_display}} <b>Zapiski: </b> {{Opravilo.zapiski}} 
 						<p></a></li>
 						----------------------------------------------------------------------------
+						{%endif%}
 					{%endfor%}
 				{%endif%}
             </div>
@@ -80,25 +84,31 @@
 				{%if vsa_opravila%}
                 <br><h4><b>Najbolj pomembno</b></h4>
                     {%for Opravilo in vsa_opravila%}
-						{%if Opravilo.prioriteta == '3'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Področje: </b> {{Opravilo.podrocje}} <b>Zapiski:</b> {{Opravilo.zapiski}}</p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.prioriteta == '3'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Področje: </b> {{Opravilo.get_podrocje_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}</p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
-					----------------------------------------------------------------------------
+						----------------------------------------------------------------------------
                 <br><h4><b>Pomembno</b></h4>
                     {%for Opravilo in vsa_opravila%}
-						{%if Opravilo.prioriteta == '2'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Področje: </b> {{Opravilo.podrocje}} <b>Zapiski:</b> {{Opravilo.zapiski}}</p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.prioriteta == '2'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Področje: </b> {{Opravilo.get_podrocje_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}</p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 					----------------------------------------------------------------------------
                 <br><h4><b>Najmanj pomembno</b></h4>
                     {%for Opravilo in vsa_opravila%}
-						{%if Opravilo.prioriteta == '1'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Področje: </b> {{Opravilo.podrocje}} <b>Zapiski:</b> {{Opravilo.zapiski}}</p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.prioriteta == '1'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Področje: </b> {{Opravilo.get_podrocje_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}</p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 					----------------------------------------------------------------------------
@@ -112,49 +122,61 @@
 				{%if vsa_opravila%}
                 <br><h4><b>Šola</b></h4>
 					{%for Opravilo in vsa_opravila%}
-						{%if Opravilo.podrocje == '1'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.podrocje == '1'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 					----------------------------------------------------------------------------
 				<br><h4><b>Delo</b></h4>
 					{%for Opravilo in vsa_opravila%}
-						{%if Opravilo.podrocje == '2'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.podrocje == '2'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 					----------------------------------------------------------------------------
 				<br><h4><b>Dom</b></h4>
 					{%for Opravilo in vsa_opravila%}
-						{%if Opravilo.podrocje == '3'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.podrocje == '3'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 					----------------------------------------------------------------------------
 				<br><h4><b>Nakupovanje</b></h4>
 					{%for Opravilo in vsa_opravila%}
-						{%if Opravilo.podrocje == '4'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.podrocje == '4'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 					----------------------------------------------------------------------------
 				<br><h4><b>Prosti čas</b></h4>
 					{%for Opravilo in vsa_opravila%}
-						{%if Opravilo.podrocje == '5'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.podrocje == '5'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 					----------------------------------------------------------------------------
 				<br><h4><b>Ostalo</b></h4>
 					{%for Opravilo in vsa_opravila%}
-						{%if Opravilo.podrocje == '6'%}
-						<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
-						<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.prioriteta}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+						{%if Opravilo.opravljen == False %}
+							{%if Opravilo.podrocje == '6'%}
+							<li><a href="/urediOpravilo/{{Opravilo.id}}/"><b>{{Opravilo.ime}}</b><br>
+							<p><b>Dokončati do: </b>{{Opravilo.dueDate}} <b>Prioriteta: </b> {{Opravilo.get_prioriteta_display}} <b>Zapiski:</b> {{Opravilo.zapiski}}<p></a></li>
+							{%endif%}
 						{%endif%}
 					{%endfor%}
 				{%endif%}
