--- a/docs/django toDo/mysite/toDo/templates/toDo/brisi_opravilo.html
+++ b/docs/django toDo/mysite/toDo/templates/toDo/brisi_opravilo.html
@@ -6,7 +6,7 @@
     <meta name="avtor" content="Lea" />
     <title>Seznam opravil</title>
     {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'toDo/css/ToDo.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'toDo/css/opravila.css' %}" type="text/css" />
 </head>
 
 <body>
@@ -27,32 +27,17 @@
                     <li><a href="{% url 'index' %}">Odjava</a></li>
                 </ul>
             </div>
-            </div>
         </div>
 
-        <div class="container">
-            <div id="Uporabnik">
-				{% if user.is_authenticated %}
-					<h2>Pozdravljen, {{user}} !</h2>
-				{%endif%}
-				<br>
-				<label>Uporabniško ime: </label>{{user}} <br><br>
-				<label>Ime: </label>{{user.first_name}}<br><br>
-				<label>Priimek: </label>{{user.last_name}}<br><br>
-				<label>Email: </label>{{user.email}}<br><br>
-				<label>Aplikaciji si se pridružil/a: </label>{{user.date_joined}}<br><br>
-				<label>Nazadnje vpisan/a: </label>{{user.last_login}}<br><br>
-				<br><br>
-				
-				<li><a href="{% url 'uredi_uporabnika' %}">Uredi račun</a></li>
-            </div>	
+        <div class="containerReg">
+            <div id="Registracija">
+				<h2>Brisanje:</h2>			
+				<form method='POST' action="{% url 'brisi_opravilo' id%}" >{% csrf_token %}
+					<p> Ste prepričani, da želite izbrisati opravilo {{Opravilo.ime}}? </p>
+					<input type='submit' value='Briši opravilo'/>
+				</form>
+            </div>		
         </div>
-		
-		<div class="container">
-          
-        </div>
-		
-		
 
 		<div id="footer">
 			<p>
