--- a/docs/django toDo/mysite/toDo/static/toDo/css/opravila.css
+++ b/docs/django toDo/mysite/toDo/static/toDo/css/opravila.css
@@ -54,7 +54,7 @@ body{
 }
 
 #wrap{
-    background: #d9c6c9;
+    background:#c1c1c1;
     height: 80px;
     opacity: 0.7;
     filter: alpha(opacity=70);
